--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Quota Management</title>
   <script type="text/javascript" src="%PUBLIC_URL%/env.js"></script>
-<!-- <script type="text/javascript" src="%PUBLIC_URL%/user.js"></script> --> 
+  <script type="text/javascript" src="%PUBLIC_URL%/user.js"></script>
 </head>
 
 <body>
